ingress/traefik/ingress-sample.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-test
spec:
  rules:
  - host: www.nginx.com
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
